Formatted code.
Change-Id: Ib5700f44129e5be33fee86f05b153527f66e9c01
Reviewed-on: http://review.couchbase.org/8644
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>